# HVM.NET

./: .gitignore  Cargo.toml  HVM.NET.sln  LICENSE  README.md  prebuild-linux-x86_64.sh
lib/hvm_dotnet/: Cargo.toml  build.rs
lib/hvm_dotnet/src/: ast.rs  hvm.c  hvm.h  hvm.rs  lib.rs
src/HVM/: Book.cs  CString.cs  EvaluationResult.cs  HVM.csproj  InteropException.cs  Interops.cs  RuntimeTypes.cs
src/HVM.Experiments/: Constants.cs  HVM.Experiments.csproj  Program.cs
