[package]
name = "hvm_dotnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
TSPL = "0.0.12"
highlight_error = "0.1.1"
num_cpus = "1.0"

[build-dependencies]
cc = "1.0"
num_cpus = "1.0"

[lib]
name = "hvm_dotnet"
crate-type = ["dylib"]

[features]
default = []
c = []